src/test/deca/context/valid/fields_compar.deca
class A{
int x;
float y;
}
class B {
int x;
}
{
A a = new A();
B b = new B();
a.x < b.x;
a.y == a.x;
}
