src/test/deca/context/invalid/protected_fields.deca
class A{
protected int x;
}
class B extends A{
int y = this.x;
A a =new A();
int z = a.x;
}